fix: Display showing images correctly
FUCK CSS this bs took me an hour just to correctly ajust for having
multiple speakers AND THEN because of this rewrite to the css I had to
change the initial stuff for just one speaker, it dosen't look amazing
but it will do omg

--- a/src/main.css
+++ b/src/main.css
@@ -99,26 +99,51 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: 5vw;
 }
 
 #main-person {
   z-index: 20;
 }
 
-#main-person,
-#main-person-overlay {
-  width: 40vw;
-  flex-shrink: 1;
-  object-fit: scale-down;
+#main-person-images {
+  display: flex;
+  justify-content: center;
+  width: 35vw;
+}
+
+#main-person-images img {
+  width: 70%;
+  z-index: 20;
+  flex: 1;
+  object-fit: cover;
   border-radius: 100%;
-  margin-left: -10vw;
+  max-height: 35vw;
+  max-width: 35vw;
+}
+
+#main-person-images img:last-child,
+#main-person-overlay img:last-child {
+  margin-left: -5vw;
 }
 
 #main-person-overlay {
   position: absolute;
   z-index: 1;
-  width: 43vw;
+  display: flex;
+  justify-content: center;
+  width: 37vw;
+}
+
+#main-person-overlay img {
+  flex: 1;
+  width: 70%;
+  object-fit: cover;
+  max-height: 36vw;
+  max-width: 36vw;
+  border-radius: 100%;
   opacity: 0.4;
+  z-index: 1;
 }
 
 #footer {
